Bug 362076 - Advanced and Artistic color pickers slow / cpu hungry when used with mouse/wacom
Summary: Advanced and Artistic color pickers slow / cpu hungry when used with mouse/wacom
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-22 09:42 UTC by basse
Modified: 2016-04-28 11:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description basse 2016-04-22 09:42:40 UTC
When using (lmb + drag around) advanced/artistic color selectors with mouse or wacom (usb connected) the update is very slow and the pointer on color lags behind. faster you move slower it gets. also my fans start to blow and cpu usage goes to 90-100%.

when used with laptops touchpad it works just fine, no slowdowns. 

also, the popup palette that comes when you right click on canvas, color selector there works fine and fast always.


Reproducible: Always

Steps to Reproduce:
1. click and drag around in color selector dialog
2.
3.

Actual Results:  
slow

Expected Results:  
fast

with Krita 2.9 this worked normally. so it's a bug introduced with qt5.

my system specs:

Kubuntu 15.10
GeForce 840M/PCIe/SSE2, (3.52 drivers)
Intel(R) Core(TM) i7-4510U CPU @ 2.00GHz
Comment 1 wolthera 2016-04-22 14:39:32 UTC
I can't reproduce this on ubuntu 15.10 with intel graphics card, and furthermore did not touch the artistic selector, so this must be a NVidea specific bug with qt as well.
Comment 2 Dmitry Kazakov 2016-04-28 11:47:14 UTC
Git commit 922ab5e4950d87d4d61f1deeb215e6365177288a by Dmitry Kazakov.
Committed on 28/04/2016 at 11:46.
Pushed by dkazakov into branch 'master'.

Add compression to the Artistic Color Selector as well

Fixes T2370

R  +0    -0    libs/global/kis_acs_pixel_cache_renderer.h [from: plugins/dockers/advancedcolorselector/kis_acs_pixel_cache_renderer.h - 100% similarity]
R  +0    -0    libs/global/kis_acs_types.h [from: plugins/dockers/advancedcolorselector/kis_acs_types.h - 100% similarity]
M  +1    -1    plugins/dockers/advancedcolorselector/kis_color_selector_base.h
M  +28   -19   plugins/dockers/artisticcolorselector/kis_color_selector.cpp
M  +18   -7    plugins/dockers/artisticcolorselector/kis_color_selector.h

http://commits.kde.org/krita/922ab5e4950d87d4d61f1deeb215e6365177288a
Comment 3 Dmitry Kazakov 2016-04-28 11:47:14 UTC
Git commit 3c12bddb9c9e61c9876e096279c3cd8fcfb74fdb by Dmitry Kazakov.
Committed on 28/04/2016 at 11:46.
Pushed by dkazakov into branch 'master'.

Compress events in the Advanced Color Selector

Fixes T2370

M  +2    -3    plugins/dockers/advancedcolorselector/kis_color_selector.cpp
M  +15   -0    plugins/dockers/advancedcolorselector/kis_color_selector_base.cpp
M  +11   -0    plugins/dockers/advancedcolorselector/kis_color_selector_base.h

http://commits.kde.org/krita/3c12bddb9c9e61c9876e096279c3cd8fcfb74fdb