Compress events in the Advanced Color Selector

Fixes T2370
BUG:362076